--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>Companies#edit</h1>
-<p>Find me in app/views/companies/edit.html.erb</p>
+<h1 class="mb-3"><%= action_name == "new" ? "Nova Empresa" : "Editar Empresa" %></h1>
+<%= render "form", company: @company %>
+<%= link_to "Voltar", companies_path, class: "btn btn-outline-secondary mt-3" %>
