--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Companies#index</h1>
-<p>Find me in app/views/companies/index.html.erb</p>
+<h1 class="mb-3">Empresas</h1>
+<%= link_to "Nova Empresa", new_company_path, class: "btn btn-primary mb-2" %>
+<ul class="list-group">
+  <% @companies.each do |company| %>
+    <li class="list-group-item d-flex justify-content-between align-items-center">
+      <%= link_to company.name, company_path(company) %>
+      <span>
+      <div class="d-flex">
+        <%= link_to "Editar", edit_company_path(company), class: "btn btn-sm btn-secondary me-2" %>
+        <%= form_with url: company_path(company), method: :delete, local: true do %>
+            <%= submit_tag "Deletar", class: "btn btn-sm btn-danger", data: { confirm: "Tem certeza?" } %>
+        <% end %>
+      <div>
+      </span>
+    </li>
+  <% end %>
+</ul>
